--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "^0.8.7",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-router-service-polyfill": "^1.0.1",
     "ember-source": "~2.14.1",
+    "ember-test-selectors": "^0.3.7",
     "loader.js": "^4.2.3"
   },
   "engines": {
