--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.3.0"
+    "ember-cli-babel": "^6.3.0",
+    "ember-router-service-polyfill": "^1.0.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -38,7 +39,6 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-router-service-polyfill": "^1.0.1",
     "ember-source": "~2.14.1",
     "ember-test-selectors": "^0.3.7",
     "loader.js": "^4.2.3"
